--- a/evan.html
+++ b/evan.html
@@ -34,8 +34,9 @@
     </style>
 </head>
 <body>
-    <div <img src="/images/evan.jpeg" alt="Stickman" width="500">
-    </div>
+     <div>
+            <img src="./assets/images/evan.jpeg" alt="evan" height="200">
+     </div>
     <div id="quote-container">
         <p class="quote"></p>
         <button onclick="generateQuote()">Generate</button>
