--- a/evan.html
+++ b/evan.html
@@ -35,7 +35,7 @@
 </head>
 <body>
      <div>
-            <img src="./assets/images/evan.jpeg" alt="evan" height="200">
+            <img src="./assets/images/evan.jpg" alt="evan" height="200">
      </div>
     <div id="quote-container">
         <p class="quote"></p>
