--- a/evan.html
+++ b/evan.html
@@ -60,7 +60,7 @@
             const randomIndex = Math.floor(Math.random() * quotes.length);
             const quote = quotes[randomIndex];
             const quoteElement = document.querySelector('.quote');
-            quoteElement.innerHTML = `"${quote}" - Benjamin Franklin`;
+            quoteElement.innerHTML = `"${quote}" - Evan Mackes`;
         }
     </script>
 </body>
