--- a/evan.html
+++ b/evan.html
@@ -44,16 +44,16 @@
 
     <script>
         const quotes = [
-            "An investment in knowledge pays the best interest.",
-            "By failing to prepare, you are preparing to fail.",
-            "Tell me and I forget. Teach me and I remember. Involve me and I learn.",
-            "Well done is better than well said.",
-            "You may delay, but time will not.",
-            "Early to bed and early to rise makes a man healthy, wealthy, and wise.",
-            "In this world nothing can be said to be certain, except death and taxes.",
-            "Our new Constitution is now established, and has an appearance that promises permanency; but in this world nothing can be said to be certain, except death and taxes.",
-            "We are all born ignorant, but one must work hard to remain stupid.",
-            "An investment in knowledge always pays the best interest."
+            "My tears cure cancer. Too bad I've never cried.",
+            "I dont read books. I stare them down til I get the information I need.",
+            "I don't call the wrong number. You answered the wrong phone.",
+            "I once roundhouse kicked someone so hard that my foot broke the speed of light.",
+            "I'm in a glass case of emotion!",
+            "I don't know how to put this but I'm kind of a big deal.",
+            "70% of the time, it works every time.",
+            "I can kill two stones with one bird.",
+            "I speak Braille.",
+            "I can unscramble an egg."
         ];
 
         function generateQuote() {
