--- a/evan.html
+++ b/evan.html
@@ -10,14 +10,14 @@
         }
       
         button {
-            background-color: #000000;
+            background-color: #6F6F6F;
             color: white;
             border: none;
-            padding: 20px 40px;
+            padding: 40px 80px;
             text-align: center;
             text-decoration: none;
             display: inline-block;
-            font-size: 20px;
+            font-size: 30px;
             margin: 4px 2px;
             cursor: pointer;
             border-radius: 10px;
