--- a/evan.html
+++ b/evan.html
@@ -39,7 +39,7 @@
     </div>
     <div id="quote-container">
         <p class="quote"></p>
-        <button onclick="generateQuote()">Click Me</button>
+        <button onclick="generateQuote()">Tap Me!</button>
     </div>
 
     <script>
