--- a/evan.html
+++ b/evan.html
@@ -14,6 +14,7 @@
             color: white;
             border: none;
             padding: 40px 80px;
+	    justify-content: center;
             text-align: center;
             text-decoration: none;
             display: inline-block;
@@ -31,13 +32,18 @@
             font-style: italic;
             margin-top: 20px;
         }
+	.center {
+ 	     display: flex;
+ 	     justify-content: center;
+	     align-items: center;
+}
     </style>
 </head>
 <body>
-    <div>
+    <div class="center">
             <img src="./assets/images/evan.jpg" alt="evan" height="713">
     </div>
-    <div id="quote-container">
+    <div id="quote-container" class="center">
         <p class="quote"></p>
         <button onclick="generateQuote()">Tap Me!</button>
     </div>
