--- a/evan.html
+++ b/evan.html
@@ -44,8 +44,10 @@
             <img src="./assets/images/evan.jpg" alt="evan" height="713">
     </div>
     <div id="quote-container" class="center">
-        <p class="quote"></p>
         <button onclick="generateQuote()">Tap Me!</button>
+    </div>
+    <div class="center">
+	<p class="quote"></p>
     </div>
 
     <script>
