--- a/evan.html
+++ b/evan.html
@@ -28,7 +28,7 @@
 	    background-color: #6F6F6F
 	}
         .quote {
-            font-size: 24px;
+            font-size: 30px;
             font-style: italic;
             margin-top: 20px;
         }
@@ -43,7 +43,9 @@
     <div class="center">
             <img src="./assets/images/evan.jpg" alt="evan" height="713">
     </div>
+    <span class="center" style="font-size: 30px">Press the button below to see all the famous things I've said</span>
     <div id="quote-container" class="center">
+        
         <button onclick="generateQuote()">Tap Me!</button>
     </div>
     <div class="center">
