--- a/evan.html
+++ b/evan.html
@@ -64,6 +64,25 @@
             "I can kill two stones with one bird.",
             "I speak Braille.",
             "I can unscramble an egg."
+	    "Some kids pee their name in the snow. I can pee my name into concrete."
+	    "When God said, “Let there be light!” I said, “Say Please.”"
+	    "If you spell Evan Mackes in Scrabble, you win. Forever."
+	    "In the Beginning there was nothing ... then I roundhouse kicked nothing and told it to get a job."
+	    "The dinosaurs looked at me the wrong way once. You know what happened to them."
+	    "I do not own a stove, oven or microwave, because revenge is a dish best served cold."
+	    "There is no lip behind my mustache. There is only another fist."
+	    "I recently had the idea to sell my pee as a canned beverage. It’s now called Red Bull."
+	    "If you want a list of my enemies, just check the extinct species list."
+	    "I do not use spell check. If I happens to misspell a word, Oxford will change the spelling."
+	    "My calendar goes straight from March 31st to April 2nd, because no one fools me."
+	    "I counted to infinity... twice."
+	    "I can do a wheelie on a unicycle."
+	    "Once a cobra bit my leg. After five days of excruciating pain, the cobra died."
+	    "I make onions cry."
+	    "Death once had a near-Evan-Mackes experience."
+	    "I can drown a fish."
+	    "When I enter a room, I don't turn the lights on, I turn the dark off."
+	    "I can get in a bucket and lift it up with myself in it."
         ];
 
         function generateQuote() {
