--- a/evan.html
+++ b/evan.html
@@ -41,7 +41,7 @@
 </head>
 <body>
     <div class="center">
-        <video height="500" autoplay>
+        <video controls loop height="500" autoplay>
             <source src="./assets/images/evan_anime_animation.mp4" type="video/mp4">
           </video>
     </div>
