--- a/evan.html
+++ b/evan.html
@@ -13,8 +13,8 @@
             background-color: #6F6F6F;
             color: white;
             border: none;
-            padding: 40px 80px;
-	    justify-content: center;
+            padding: 10px 10px;
+	        justify-content: center;
             text-align: center;
             text-decoration: none;
             display: inline-block;
@@ -24,24 +24,24 @@
             border-radius: 10px;
 	    
         }
-	button:hover {
+	    button:hover {
 	    background-color: #6F6F6F
-	}
+	    }
         .quote {
             font-size: 30px;
             font-style: italic;
             margin-top: 20px;
         }
-	.center {
+	    .center {
  	     display: flex;
  	     justify-content: center;
 	     align-items: center;
-}
+        }
     </style>
 </head>
 <body>
     <div class="center">
-        <video controls loop height="500" autoplay>
+        <video loop height="500" autoplay>
             <source src="./assets/images/evan_anime_animation.mp4" type="video/mp4">
           </video>
     </div>
