--- a/evan.html
+++ b/evan.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>Random Quote Generator</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
     <style>
         body {
             background-color: black;
