--- a/evan.html
+++ b/evan.html
@@ -30,7 +30,6 @@
 	    background-color: #6F6F6F
 	    }
         .quote {
-            font-size: 30px;
             font-style: italic;
             margin-top: 20px;
         }
@@ -52,7 +51,7 @@
             <source src="./assets/images/evan_anime_animation.mp4" type="video/mp4">
           </video>
     </div>
-    <span class="center, responsive-text" style="font-size: 30px">Press the button below to see all the famous things I've said</span>
+    <span class="center, responsive-text">Press the button below to see all the famous things I've said</span>
     <div id="quote-container" class="center">
         
         <button onclick="generateQuote()">Tap Me!</button>
