--- a/evan.html
+++ b/evan.html
@@ -47,7 +47,7 @@
 </head>
 <body>
     <div class="center">
-        <video playsinline loop autoplay preload="auto" height="300" >
+        <video muted playsinline loop autoplay preload="auto" height="300" >
             <source src="./assets/images/evan_anime_animation.mp4" type="video/mp4">
           </video>
     </div>
