--- a/evan.html
+++ b/evan.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+\<!DOCTYPE html>
 <html>
 <head>
     <title>Random Quote Generator</title>
@@ -41,6 +41,9 @@
 	    .center {
  	        text-align: center;
             margin: auto;
+            display: flex;
+ 	        justify-content: center;
+	        align-items: center;
         }
         @media screen and (max-width: 600px) {
             .responsive-text {
