--- a/evan.html
+++ b/evan.html
@@ -1,4 +1,4 @@
-\<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <title>Random Quote Generator</title>
@@ -20,7 +20,7 @@
             color: white;
             border: none;
             padding: 10px 10px;
-	    justify-content: center;
+	        justify-content: center;
             text-align: center;
             text-decoration: none;
             display: inline-block;
@@ -31,7 +31,7 @@
 	    
         }
 	    button:hover {
-	    background-color: #6F6F6F
+	        background-color: #ff009d
 	    }
         .quote {
             font-size: 30px;
@@ -66,7 +66,7 @@
 </head>
 <body>
     <div class="center">
-        <video playsinline loop autoplay height="300" >
+        <video muted playsinline loop autoplay height="300" >
             <source src="./assets/images/evan_anime_animation.mp4" type="video/mp4">
           </video>
     </div>
